[package]
name = "kmz-downloader"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
geo-types = "0.7.9"
kml = { path = "./kml" }
regex = "1.7.3"
reqwest = { version = "0.11.15", features = ["blocking"] }
scraper = "0.15.0"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
yaml-rust = "0.4.5"
zip = "0.6.4"
